--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/LTI.BookStore/.vs/LTI.BookStore
+/LTI.BookStore/LTI.BookStore/bin/Debug/netcoreapp3.1
+/LTI.BookStore/LTI.BookStore/obj
