--- a/LTI.BookStore/LTI.BookStore/Properties/launchSettings.json
+++ b/LTI.BookStore/LTI.BookStore/Properties/launchSettings.json
@@ -3,7 +3,7 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:55540",
+      "applicationUrl": "http://localhost:55540", //using IIS server
       "sslPort": 0
     }
   },
@@ -18,7 +18,7 @@
     "LTI.BookStore": {
       "commandName": "Project",
       "launchBrowser": true,
-      "applicationUrl": "http://localhost:5000",
+      "applicationUrl": "http://localhost:5000", //using kestral server
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
