--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 /LTI.BookStore/.vs/LTI.BookStore
 /LTI.BookStore/LTI.BookStore/bin/Debug/netcoreapp3.1
 /LTI.BookStore/LTI.BookStore/obj
+
+/LTI.BookStore/LTI.BookStore/wwwroot/lib
