--- a/LTI.BookStore/LTI.BookStore/LTI.BookStore.csproj
+++ b/LTI.BookStore/LTI.BookStore/LTI.BookStore.csproj
@@ -3,5 +3,13 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="wwwroot\js\" />
+  </ItemGroup>
   
 </Project>
